Fixed close button positioning on smaller windows (#463)
* Fixed close button positioning on smaller windows

* Further positioning adjustments

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -22,9 +22,10 @@
       width: 27px;
       height: 27px;
       opacity: 1;
-      top: -15px;
-      right: -4px;
+      top: 10px;
+      right: 10px;
       position: absolute;
+      z-index: 1000;
 
       span {
         display: none;
